--- a/app/globals.css
+++ b/app/globals.css
@@ -5,3 +5,11 @@
 body {
   overflow-x: hidden;
 }
+
+@layer base {
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+}
